[package]
name = "dict"
version = "0.1.0"
authors = ["ksk001100 <hm.pudding0715@gmail.com>"]
edition = "2018"
description = "Dictionary CLI to search from Wikipedia"

[dependencies]
seahorse = "1.1.1"
surf = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
async-std = { version = "1.9.0", features = ["attributes"] }
serde_json = "1.0.64"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
